--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.password=gitan
 # HIBERNATE
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-spring.jpa.hibernate.ddl-auto= create
+spring.jpa.hibernate.ddl-auto= update
 
 # SWAGGER CONFIGURATION VALUES
 springdoc.api-docs.path=/api-docs
@@ -32,7 +32,7 @@ spring.jpa.open-in-view=false
 
 # Configuration SMTP (exemple avec Gmail)
 spring.mail.host=smtp.gmail.com
-spring.mail.port=587
+spring.mail.port=587 
 spring.mail.username=3alem.live@gmail.com
 spring.mail.password=niqtadnvhvbtfhyc
 
