--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,14 +11,10 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.hibernate.ddl-auto= update
 
-# SWAGGER CONFIGURATION VALUES
+
+# Swagger
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
-springdoc.api-docs.enabled=true
-springdoc.swagger-ui.enabled=true
-logging.level.org.springframework=DEBUG
-logging.level.org.springdoc=DEBUG
-
 
 spring.security.user.name=admin
 spring.security.user.password=admin
