--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,3 +34,11 @@ spring.mail.password=niqtadnvhvbtfhyc
 
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+spring.jackson.serialization.fail-on-empty-beans=false
+spring.jackson.default-property-inclusion=non_null
+spring.jackson.serialization.write-dates-as-timestamps=false
+
+# Configuration Ollama
+ollama.api.url=http://127.0.0.1:11434/api/generate
+ollama.model=llama3
