adding lob confug

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/3alemLive
 spring.jpa.database=POSTGRESQL
 spring.datasource.username=postgres
 spring.datasource.password=gitan
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 # HIBERNATE
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
@@ -42,3 +43,13 @@ spring.jackson.serialization.write-dates-as-timestamps=false
 # Configuration Ollama
 ollama.api.url=http://127.0.0.1:11434/api/generate
 ollama.model=llama3
+# Configuration HikariCP (pool de connexions)
+spring.datasource.hikari.auto-commit=false
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=2
+spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.connection-timeout=30000
+
+# Configuration importante pour les transactions et LOBs
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.connection.provider_disables_autocommit=true
